# SD

DSAProject/: main.cpp
DSAProject/ATM/: atm.cpp
DSAProject/LinkedList/: list.cpp
DSAProject/bancnote/: collectionB.cpp  collectionB.h
DSAProject/tranzactie/: tranzactie.cpp  tranzactie.h
sdaLabBun (1)/: CMakeLists.txt
sdaLabBun (1)/ATM/: atm.h
sdaLabBun (1)/LinkedList/: list.h  node.cpp  node.h
